--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "koishi-plugin-eval",
+  "name": "@h4m5ter/koishi-plugin-eval-unsafe",
   "description": "",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -9,13 +9,11 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
     "plugin"
   ],
-  "devDependencies": {},
   "peerDependencies": {
     "koishi": "^4.17.12"
   }
